feat(coder): add preview labels, ThreadLocal exception, and JDK 25 features in jdk25-rules